Fix Pricing Pipeline & Implement True 0DTE Logic (Fixes 1-5)

--- a/docs/daily_log_2026_02_09.md
+++ b/docs/daily_log_2026_02_09.md
@@ -111,3 +111,38 @@
     - **Outcome**: **FAILED (Timeout)**.
     - **Analysis**: Consistent pattern. We are pricing aggressively (Mid Price), but the spread width in Paper is preventing fills.
     - **Status**: Monitor continues scanning.
+- **10:35 AM**: **SESSION RESTART**.
+    - **Configuration**:
+        - Wing Width: **2.0**
+        - Min Credit: **$0.20**
+        - Margin Check: **Bypassed (Paper Hotfix)**.
+    - **Status**: Monitor restarting to scan for opportunities with new parameters.
+- **10:36 AM**: **TRADE CONFIRMED (Trade #4)**.
+    - **Trigger**: Immediate execution upon restart with new parameters.
+    - **Strikes**: 684P / 704C (Width 2.0).
+    - **Credit**: **$0.58** (Net Credit reported in Audit).
+    - **Recovery**: Monitor detected the position immediately after restart and entered "Monitoring Mode".
+    - **Status**: **ACTIVE**. PnL ~$-10.00 (Spread).
+- **10:39 AM**: **JOURNAL RECOVERY**.
+    - **Issue**: Trade #4 was NOT logged automatically in `trade_journal.csv`.
+    - **Cause**: The trade executed during the startup sequence (Zombie/Race Condition), so the "Open Trade" logic in Python was skipped (it went straight to "Recovery Mode").
+    - **Action**: Manually backfilled Trade #4 details into the CSV to maintain record integrity.
+
+
+- **10:45 AM**: **DATA RECOVERY ATTEMPT**.
+    - **Goal**: Fetch historical Greeks/IV for Trade #4 (10:36 AM) to complete the Journal.
+    - **Method**: Script `fetch_historical_greeks.py` requesting 1-min historical bars for Option Implied Volatility.
+    - **Result**: **FAILED (Error 162)**.
+    - **Conclusion**: IBKR Paper Trading does not provide historical data for intraday option contracts. The Journal will remain with financial data only (Strikes, Credit, PnL) and missing analytical data (Greeks) for this specific trade.
+- **10:52 AM**: **MONITORING OBSERVATION**.
+    - **State**: Position Stable. PnL `-$13.24` (Real-time).
+    - **Detail**: Short Put (684P) leg showing slight negative PnL (`-$6.16`) while Call side is neutral.
+    - **Analysis**: Normal spread volatility and slight spot drift. Position is well within safety limits (Stop Loss > -$140).
+- **Post-Session Anomaly**: **Weekly vs 0DTE**.
+    - **Observation**: The trade opened at 10:36 AM (Trade #4) did NOT expire on Feb 9. It is still open on Feb 10.
+    - **Cause**: The function `get_next_friday_expiry()` in `run_live_monitor.py` hardcodes the expiration to the *next Friday*. Since Feb 9 was a Monday, it selected Feb 13 (Friday).
+    - **Impact**: The strategy operated as a **Weekly Iron Condor (4 DTE)** instead of 0DTE.
+    - **Resolution**:
+        - **Immediate**: Documented as "Accidental Swing Trade" (Currently Profitable +$7.00).
+        - **Fix Required**: Update logic to select `Today` if today is a valid trading day, otherwise `Next Trading Day`.
+
